0.2.2
=====
- [bug] setup.py won't install argparse if on
  Python 2.7/3.2

- [feature] script_location can be interpreted
  by pkg_resources.resource_filename(), if
  it is a non-absolute URI that contains 
  colons.   This scheme is the same
  one used by Pyramid.  [#29]

- [feature] added missing support for 
  onupdate/ondelete flags for 
  ForeignKeyConstraint, courtesy Giacomo Bagnoli

- [bug] fixed a regression regarding an autogenerate
  error message, as well as various glitches
  in the Pylons sample template.  The Pylons sample
  template requires that you tell it where to 
  get the Engine from now.  courtesy 
  Marcin Kuzminski [#30]

- [bug] drop_index() ensures a dummy column
  is added when it calls "Index", as SQLAlchemy
  0.7.6 will warn on index with no column names.

0.2.1
=====
- [bug] Fixed the generation of CHECK constraint,
  regression from 0.2.0 [#26]

0.2.0
=====
- [feature] API rearrangement allows everything
  Alembic does to be represented by contextual
  objects, including EnvironmentContext,
  MigrationContext, and Operations.   Other
  libraries and applications can now use
  things like "alembic.op" without relying
  upon global configuration variables.
  The rearrangement was done such that 
  existing migrations should be OK, 
  as long as they use the pattern 
  of "from alembic import context" and 
  "from alembic import op", as these
  are now contextual objects, not modules.
  [#19]

- [feature] The naming of revision files can
  now be customized to be some combination
  of "rev id" and "slug", the latter of which
  is based on the revision message.
  By default, the pattern "<rev>_<slug>"
  is used for new files.   New script files
  should include the "revision" variable
  for this to work, which is part of 
  the newer script.py.mako scripts.
  [#24]

- [bug] env.py templates call 
  connection.close() to better support 
  programmatic usage of commands; use
  NullPool in conjunction with create_engine()